добавил форму заказа звонка

--- a/css/dm.css
+++ b/css/dm.css
@@ -22,3 +22,6 @@
 .slider-caption.slider-caption-center.slider-text .slider-text--medium {
     font-weight: 300;
 }
+
+
+#recallMe .col-padding { padding: 50px; }
